# fwupd

plugins/: meson.build
plugins/cros-ec/: cros-ec.quirk  fu-cros-ec-common.h  fu-cros-ec-firmware.c  fu-cros-ec-firmware.h  fu-cros-ec-hammer-touchpad-firmware.c  fu-cros-ec-hammer-touchpad.c  fu-cros-ec-plugin.c  fu-cros-ec-usb-device.c  fu-cros-ec-usb-device.h  fu-cros-ec-usb-hammer.c  fu-cros-ec.rs
plugins/cros-ec/tests/: google-usb-hammer-detachable.json
plugins/cros-hammer/: README.md  cros-hammer.quirk  fu-cros-hammer-common.c  fu-cros-hammer-common.h  fu-cros-hammer-device.c  fu-cros-hammer-device.h  fu-cros-hammer-firmware.c  fu-cros-hammer-firmware.h  fu-cros-hammer-plugin.c  fu-cros-hammer-plugin.h  fu-cros-hammer.rs  meson.build
plugins/cros-hammer/tests/: cros-hammer-setup.json  cros-hammer.json
src/: fu-tool.c  fu-util.c
